--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-sm-12 text-center text-md-start">
                     <h6>HELLO THERE</h6>
-                    <h1>I’m SAYMON<br><span>SOFTWARE ENGINEER</span><br>Brain Station23 Ltd.</h1>
+                    <h1>I’m SAYMON<br><span>STUDENT</span><br>STUDY IN CSE, AUST</h1>
                     <div class="mt-4">
                         <a class="main-btn" href="resume/resume.docx">Download CV</a>
                     </div>
@@ -88,8 +88,7 @@
                     <div class="my-3 my-lg-0">
                         <span class="subtitle">My About Details</span>
                         <h2>About Me</h2>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered in some form, by injected humour.</p>
+                        <p>I'm M Saymon Islam Iftikar. Study in CSE at Ahsanullah University of Science and Technology. I'm passionate about competitive programming.</p>
                     </div>
                     <div class="pt-4">
                         <ul class="nav nav-pills justify-content-center justify-content-lg-between mb-3" id="pills-tab"
@@ -125,7 +124,7 @@
                                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                         </div>
                                     </div>
-                                    <span class="label">95%</span>
+                                    <span class="label">75%</span>
                                 </div>
                                 <div class="single-progress">
                                     <h6>C,C++ AND C#</h6>
@@ -134,7 +133,7 @@
                                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                         </div>
                                     </div>
-                                    <span class="label">90%</span>
+                                    <span class="label">70%</span>
                                 </div>
                                 <div class="single-progress">
                                     <h6>Asp.net</h6>
@@ -143,7 +142,7 @@
                                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                         </div>
                                     </div>
-                                    <span class="label">75%</span>
+                                    <span class="label">65%</span>
                                 </div>
                                 <div class="single-progress">
                                     <h6>Angular</h6>
@@ -152,57 +151,43 @@
                                             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
                                         </div>
                                     </div>
-                                    <span class="label">80%</span>
+                                    <span class="label">60%</span>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-Award" role="tabpanel"
                                 aria-labelledby="pills-Award-tab">
                                 <ul class="text-start ps-0">
-                                    <li><a href="#">Best Engineer
-                                            <span>- Winner</span></a> 2019 - 2020
+                                    <li><a href="#">IAPC
+                                            <span>- Participant</span></a> 2021 - 2022
                                     </li>
-                                    <li><a href="#">Software Design Awards
-                                            <span>- Winner</span></a> 2017 - 2018
+                                    <li><a href="#">IAPC
+                                            <span>- Participant</span></a> 2020 - 2021
                                     </li>
-                                    <li><a href="#">Design nominees
-                                            <span>- site of the
-                                                day</span></a> 2013- 2014
+                                    <li><a href="#">NHSPC
+                                            <span>- Participant</span></a> 2018- 2019
                                     </li>
-                                    <li><a href="#">IUPC
-                                            <span>- Winner</span></a> 2019 - 2020
+                                    <li><a href="#">NHSPC
+                                            <span>- Participant</span></a> 2017 - 2018
                                     </li>
                                 </ul>
                             </div>
                             <div class="tab-pane fade" id="pills-experiance" role="tabpanel"
                                 aria-labelledby="pills-experiance-tab">
                                 <ul class="text-start ps-0">
-                                    <li><a href="#">Sr. Back-end
+                                    <li><a href="#">Jr. Back-end
                                             Engineer<span> -
                                                 Brain Station23 Ltd. </span></a> 2022 - Current
                                     </li>
-                                    <li><a href="#">Back-end
-                                            Engineer<span> -
-                                                BJIT Ltd.</span></a> 2021 - 2022
-                                    </li>
-                                    <li><a href="#">Software
-                                            Engineer<span> - Tiger IT
-                                            </span></a> 2020- 2021</li>
-                                    <li><a href="#">Jr. Software
-                                            Engineer<span> - Therap IT Ltd.
-                                            </span></a> 2019- 2020</li>
                                 </ul>
                             </div>
                             <div class="tab-pane fade" id="pills-education" role="tabpanel"
                                 aria-labelledby="pills-education-tab">
                                 <ul class="text-start ps-0">
-                                    <li><a href="#">MSc In CSE<span>
-                                                - DU</span></a> 2021
+                                    <li><a href="#">BSc In CSE<span> - AUST</span></a> 2020-Ongoing
                                     </li>
-                                    <li><a href="#">BSc In CSE<span> - AUST</span></a> 2019
+                                    <li><a href="#">HSC<span> - MES COLLEGE</span></a> 2019
                                     </li>
-                                    <li><a href="#">HSC<span> - MES COLLEGE</span></a> 2015
-                                    </li>
-                                    <li><a href="#">SSC<span> - ISLAND HIGH SCHOOL</span></a> 2013
+                                    <li><a href="#">SSC<span> - ISLAND HIGH SCHOOL</span></a> 2017
                                     </li>
                                 </ul>
                             </div>
@@ -222,8 +207,8 @@
                 <div class="col-sm-12 text-center mb-4">
                     <span class="subtitle">What I can do for you</span>
                     <h2>My Awesome Service</h2>
-                    <p>There are many variations of passages of Lorem Ipsum available,<br class="d-none d-md-block">
-                        but the majority have suffered alteration.</p>
+                    <p>I have done a lot of services in my career, among them<br class="d-none d-md-block">
+                        some works are my favourite and that's are.</p>
                 </div>
             </div>
             <div class="row">
@@ -232,7 +217,7 @@
                         <div class="card-body text-md-start text-center">
                             <img src="./images/service-1.svg" alt="service" class="img-fluid mb-4">
                             <h3>SEO Services</h3>
-                            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
+                            <p>Previously I help SEO works on two to three website.</p>
                         </div>
                     </div>
                 </div>
@@ -241,7 +226,7 @@
                         <div class="card-body text-md-start text-center">
                             <img src="./images/service-2.svg" alt="service" class="img-fluid mb-4">
                             <h3>Website Development</h3>
-                            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
+                            <p>I have design 3 to 4 website using wordpress in my career.</p>
                         </div>
                     </div>
                 </div>
@@ -250,7 +235,7 @@
                         <div class="card-body text-md-start text-center">
                             <img src="./images/service-3.svg" alt="service" class="img-fluid mb-4">
                             <h3>Game Development</h3>
-                            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
+                            <p>Game Development was not my passion but I developed two games.</p>
                         </div>
                     </div>
                 </div>
@@ -259,7 +244,7 @@
                         <div class="card-body text-md-start text-center">
                             <img src="./images/service-3.svg" alt="service" class="img-fluid mb-4">
                             <h3>Mobile App Development</h3>
-                            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
+                            <p>Mobile App Development was not my passion but I developed two Mobile App.</p>
                         </div>
                     </div>
                 </div>
@@ -268,7 +253,7 @@
                         <div class="card-body text-md-start text-center">
                             <img src="./images/service-4.svg" alt="service" class="img-fluid mb-4">
                             <h3>Public Services</h3>
-                            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
+                            <p>In my school and college life I have worked with scout and red cresent.</p>
                         </div>
                     </div>
                 </div>
@@ -277,7 +262,7 @@
                         <div class="card-body text-md-start text-center">
                             <img src="./images/service-3.svg" alt="service" class="img-fluid mb-4">
                             <h3>Mobile App Development</h3>
-                            <p>Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.</p>
+                            <p>Mobile App Development was not my passion but I developed two Mobile App.</p>
                         </div>
                     </div>
                 </div>
@@ -294,8 +279,8 @@
                 <div class="col-sm-12 text-center mb-4">
                     <span class="subtitle">My Complete project</span>
                     <h2>My Latest Project</h2>
-                    <p>There are many variations of passages of Lorem Ipsum available,<br class="d-none d-md-block">
-                        but the majority have suffered alteration.</p>
+                    <p>There are a few project that I have completed,<br class="d-none d-md-block">
+                        but the majority will come in futre.</p>
                 </div>
             </div>
             <div class="row">
