--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                 <ul class="text-start ps-0">
                                     <li><a href="#">Jr. Back-end
                                             Engineer<span> -
-                                                Brain Station23 Ltd. </span></a> 2022 - Current
+                                                Moheshkhali Tribune </span></a> 2022 - Current
                                     </li>
                                 </ul>
                             </div>
